# veda-keycloak

./: .gitignore  README.md  cdk.context.json  cdk.json  docker-compose.yaml  examples.docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cicd.yaml  deploy.yaml  diff.yaml  scorecard.yml
cdk/: app.py  app.ts
cdk/lib/: KeycloakConfig.ts  KeycloakDatabase.ts  KeycloakService.ts  KeycloakStack.ts  settings.py  utils.py
cdk/lib/keycloak/: __init__.py  config.py  database.py  service.py  stack.py  url.py
cdk/lib/sesrelay/: Dockerfile  __init__.py  aws-smtp-relay-custom.jsonc  stack.py
config/: Dockerfile  apply-config.mjs
config/src/: master.yaml  veda.yaml
deploy/: app.ts  veda-keycloak.ts
deploy/lib/: KeycloakConfig.ts  KeycloakDatabase.ts  KeycloakService.ts  KeycloakStack.ts  KeycloakUrl.ts  utils.ts
examples/eoapi-auth-utils/: Dockerfile  README.md  pyproject.toml
examples/eoapi-auth-utils/app/: main.py
keycloak/: Dockerfile  pom.xml
keycloak-config-cli/: Dockerfile
keycloak-config-cli/config/: examples.yaml  ghgc.yaml  local.yaml  maap.yml  master.yaml  veda.yaml
keycloak-config-cli/config/dev/: eic.yaml  ghgc.yaml  maap.yml  veda.yaml
keycloak-config-cli/config/prod/: disasters.yaml  eic.yaml  ghgc.yaml  maap.yml  veda.yaml
keycloak/providers/: build_and_collect_jars.sh
keycloak/providers/email-on-user-creation/: pom.xml
lib/: keycloak-stack.ts  veda-keycloak-stack.ts
test/: veda-keycloak.test.ts
tests/: README.md
tests/smoke/: conftest.py  test_health_check.py
(+29 files in other folders)
