[project]
dependencies = [
  "aws-cdk-lib>=2.181.1",
  "boto3>=1.37.5",
  "pydantic-settings>=2.8.1",
  "pyyaml>=6.0.2",
]
description = "Keycloak tooling for VEDA"
name = "veda-keycloak"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[tool.uv.workspace]
members = [
  "examples/eoapi-auth-utils",
]
