[project]
name = "veda-keycloak"
version = "0.1.0"
description = "Keycloak tooling for VEDA"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib>=2.181.1",
    "boto3>=1.37.5",
    "pydantic-settings>=2.8.1",
    "pyyaml>=6.0.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "requests>=2.25"
]